--- a/STANDARD_WEB/web/css/style.css
+++ b/STANDARD_WEB/web/css/style.css
@@ -9,12 +9,12 @@
 
 /* 레이아웃 */
 #wrap {width: 100%;}
-#header {width: 100%;height: 325px;background:url(../img/header_bg.jpg) center top repeat-x;}
-#contents {width: 100%;height: 800px;background:#222;}
-#footer {width: 100%;height: 200px;background:#333;}
+#header {height: 325px;background:url(../img/header_bg.jpg) center top repeat-x;}
+#contents {}
+#footer {height: 200px;background:#333;}
 
 /* 컨텐츠 레이아웃 */
-#cont_nav {width: 100%;height: 200px;background:#333;}
+#cont_nav {}
 #cont_tit {width: 100%;height: 200px;background:#444;}
 #cont_ban {width: 100%;height: 200px;background:#555;}
 #cont_cont {width: 100%;height: 200px;background:#666;}
@@ -24,9 +24,42 @@
 
 
 /* 헤더 */
-.header {}
+
 .header .header-menu {text-align: right;}
 .header .header-menu a {color:#fff;padding:10px 0px 10px 13px;display:inline-block;}
 .header .header-menu a:hover {color:#6666;}
-.header .header-tit {}
-.header .header-icon {}
+.header .header-tit {text-align: center;}
+.header .header-tit h1{ background-color:#4aa8d4;font-size:28px;padding:8px 20px 6px 20px;display:inline-block;color:#fff;margin-top:40px; font-weight:normal; text-transform:uppercase;}
+.header .header-tit a{display:inline-block;background-color:#2698cb;font-size:18px;color:#fff;padding:5px 20px 6px 20px;margin-top:-5px;}
+.header .header-tit a:hover {color:#6666;}
+.header .header-icon {text-align: center;margin:30px;}
+.header .header-icon a{width: 60px;height: 60px;display:inline-block;background:url(../img/icon.png);margin:0 3px;}
+.header .header-icon a.icon1{background-position: 0 0;}
+.header .header-icon a.icon2{background-position: 0 -60px;}
+.header .header-icon a.icon3{background-position: 0 -120px;}
+.header .header-icon a.icon4{background-position: 0 -180px;}
+.header .header-icon a.icon1:hover {background-position: -60px 0;}
+.header .header-icon a.icon2:hover {background-position: -60px -60px;}
+.header .header-icon a.icon3:hover {background-position: -60px -120px;}
+.header .header-icon a.icon4:hover {background-position: -60px -180px;}
+
+/* float: left로 인한 영역 깨짐(height:0) 
+1. 깨지는 영역에 똑같이 float:left 를 사용한다.(매우 좋지 않은 방법) -->모든 박스에 float:left를 사용해주어야함.
+2. float의 성질을 차단하는 clear:both;를 사용한다. (잘 쓰지 않음) --> 어떤 영역이 깨졌는지 찾기 어려움.
+3. float을 사용한 상위 박스한테 overflow:hidden;을 사용한다. --> 현재는 가장 많이 사용하는 방법.
+4. clearfix를 사용한다. (가장 좋은 방법 : 반응형에서 사용)
+*/
+
+
+/* 전체 메뉴 */
+.nav {overflow:hidden;padding:30px 0;}
+.nav > div {float:left;width: 40%;}
+.nav > div:last-child {width: 20%;} /* ie9 부터 사용가능 (개발시 호환버전 8도 맞춰야하면 사용하면안됨)*/
+.nav > div.last {width:20%;} /* 다음과 같이 쓰면 호환 가능 */
+.nav > div h3{font-size:18px; color:#25a2d0;margin-bottom:4px;}
+.nav > div ol{overflow: hidden;}
+.nav > div ol li{float:left;width: 50%;}
+.nav > div.last ol li{width: 100%;}
+.nav > div ol li a:hover{text-decoration: underline;}
+
+
