--- a/STANDARD_WEB/web/css/reset.css
+++ b/STANDARD_WEB/web/css/reset.css
@@ -32,3 +32,20 @@ form {
 /* a 링크 초기화 */
 a{color:#222; text-decoration:none;}
 a:hover {color:#390;}
+
+/* 폰트 초기화 */
+body, input, textarea, select, button, table {
+    font-family: 'Courier Prime',AppleSDGothicNeo-Regular,'Malgun Gothic','맑은 고딕',dotum,'돋움',sans-serif;
+    color:#222;font-size:13px;line-height:1.5;
+}
+
+/* 블릿기호 초기화 */
+dl,ul,li,ol,menu{list-style: none;}
+
+/* IR 기법 */
+/* 의미있는 이미지의 대체 텍스트를 제공하는 경우 */
+.ir_pm {display:block;overflow:hidden;font-size:0;line-height:0;text-indent: -9999px;}
+/* 의미있는 이미지의 대체 텍스트로 이미지가 없어도 대체 텍스트를 보여주고자 할 때 */
+.ir_wa {display:block;overflow:hidden;position:relative;z-index:-1;width: 100%;height: 100%;}
+/* 대체 텍스트가 아닌 접근성을 위한 숨김 텍스트를 제공할 때*/
+.ir_su {overflow:hidden;position:absolute;width: 0;height: 0;line-height: 0;text-indent:-9999px;}
