--- a/STANDARD_WEB/web/css/style.css
+++ b/STANDARD_WEB/web/css/style.css
@@ -14,8 +14,8 @@
 #footer {height: 200px;background:#333;}
 
 /* 컨텐츠 레이아웃 */
-#cont_nav {}
-#cont_tit {width: 100%;height: 200px;background:#444;}
+#cont_nav {background-color:#f6fdff;}
+#cont_tit {background-color:#EAF7FD;}
 #cont_ban {width: 100%;height: 200px;background:#555;}
 #cont_cont {width: 100%;height: 200px;background:#666;}
 
@@ -61,5 +61,12 @@
 .nav > div ol li{float:left;width: 50%;}
 .nav > div.last ol li{width: 100%;}
 .nav > div ol li a:hover{text-decoration: underline;}
+
+/* 타이틀 */
+.tit {position:relative;}
+.tit h2 {font-size: 40px;text-align: center; padding: 5px 0; letter-spacing: 2px;
+color:#2c94c4;font-family: 'Nanum Brush Script', cursive;}
+.tit .btn {position:absolute; top:5px; right:0; width: 60px; height: 60px;
+background: url(../img/icon.png) no-repeat 0 -600px;}
 
 
