--- a/STANDARD_WEB/web/css/reset.css
+++ b/STANDARD_WEB/web/css/reset.css
@@ -42,6 +42,9 @@ body, input, textarea, select, button, table {
 /* 블릿기호 초기화 */
 dl,ul,li,ol,menu{list-style: none;}
 
+/* 제목 태그 초기화 */
+h1,h2,h3,h4,h5,h6 {font-size:13px; color:#222; font-weight:normal;}
+
 /* IR 기법 */
 /* 의미있는 이미지의 대체 텍스트를 제공하는 경우 */
 .ir_pm {display:block;overflow:hidden;font-size:0;line-height:0;text-indent: -9999px;}
