--- a/STANDARD_WEB/web/css/style.css
+++ b/STANDARD_WEB/web/css/style.css
@@ -16,8 +16,8 @@
 /* 컨텐츠 레이아웃 */
 #cont_nav {background-color:#f6fdff;}
 #cont_tit {background-color:#EAF7FD;}
-#cont_ban {width: 100%;height: 200px;background:#555;}
-#cont_cont {width: 100%;height: 200px;background:#666;}
+#cont_ban {background-color:#dceff7;}
+#cont_cont {background:#f6fdff;}
 
 /* 컨테이너 */
 .container {width: 990px;margin :0 auto;height: inherit;/*background:rgba(255,255,255,0.3);*/}
@@ -69,4 +69,67 @@ color:#2c94c4;font-family: 'Nanum Brush Script', cursive;}
 .tit .btn {position:absolute; top:5px; right:0; width: 60px; height: 60px;
 background: url(../img/icon.png) no-repeat 0 -600px;}
 
+/* 배너 */
+.ban {position:relative; padding: 24px 0 20px;} /*position:absolute의 기준점이 됨*/
+.ban a.prev {position:absolute; left: -80px; top: 60px; width:43px; height: 43px;background :url(../img/icon.png) no-repeat -150px 0;} 
+/*위치를 자유롭게 이동시킬때 사용, position:relative가 기준이 됨. 그냥 이것만 주면 왼쪽 위로 가서 안보임 */
+.ban a.next {position:absolute; right: -80px; top: 60px; width:43px; height: 43px;background: url(../img/icon.png) no-repeat -150px -43px;}
+.ban a.prev:hover {background-position: -193px 0;}
+.ban a.next:hover {background-position: -193px -43px;}
+.ban ul {overflow: hidden;}
+.ban ul li {float: left; width: 330px;}
+.ban ul li:last-child {text-align: right;} /* ie9부터 적용 */
+.ban ul li:nth-child(2) {text-align: center;}/* ie9부터 적용 */
+.ban ul li.ban_img1 {text-align: left;}
+.ban ul li.ban_img2 {text-align: center;}
+.ban ul li.ban_img3 {text-align: right;} /* 모든 버전에 호환되게 하려면 이렇게 작업 */
+.ban ul li img {border: 4px solid #dcdcdc;}
+.ban ul li img:hover {border-color:#98bcdc;}
+
+/* 컨텐츠 */
+.cont {overflow: hidden;padding-top: 30px;}
+.cont .column {position:relative; float:left; width: 289px;height: 363px; margin:0 30px 30px 0;padding-right: 30px;}
+.cont .col1 {border-right: 1px solid #c8c8c8;}
+.cont .col2 {border-right: 1px solid #c8c8c8;}
+.cont .col3 {margin-right: 0;padding-right: 0;}
+.cont .col4 {border-right: 1px solid #c8c8c8;}
+.cont .col5 {border-right: 1px solid #c8c8c8;}
+.cont .col6 {margin-right: 0;padding-right: 0;}
+
+
+.cont .column .ico_img {display:block; width: 60px;height: 60px; background: url(../img/icon.png) no-repeat; position: absolute; left: 0; top: 0;}
+.cont .column .ico_tit {padding-left: 70px; font-size: 16px; color:#2c94c4;}
+.cont .column .ico_desc {padding-left: 70px;border-bottom: 1px solid #d0d0d0;padding-bottom: 15px; margin-bottom: 15px;}
+
+.cont .col1 .ico_img {background-position: 0px -240px;}
+.cont .col2 .ico_img {background-position: 0px -300px;}
+.cont .col3 .ico_img {background-position: 0px -360px;}
+.cont .col4 .ico_img {background-position: 0px -420px;}
+.cont .col5 .ico_img {background-position: 0px -480px;}
+.cont .col6 .ico_img {background-position: 0px -540px;}
+
+.cont .col1 .ico_img:hover {background-position: -60px -240px;}
+.cont .col2 .ico_img:hover {background-position: -60px -300px;}
+.cont .col3 .ico_img:hover {background-position: -60px -360px;}
+.cont .col4 .ico_img:hover {background-position: -60px -420px;}
+.cont .col5 .ico_img:hover {background-position: -60px -480px;}
+.cont .col6 .ico_img:hover {background-position: -60px -540px;}
+
+/* 게시판 */
+.notice {position: relative;}
+.notice h4 {font-size: 14px; color: #0093bd; padding-bottom: 3px;font-weight: bold;}
+.notice ul li {overflow: hidden; text-overflow: ellipsis; white-space: nowrap; background: url(../img/dot.gif) no-repeat 0 8px;padding-left: 8px;}
+.notice ul li a {font-size: 12px;}
+.notice a.more {position: absolute; right: 0; top: 0; display: block;
+background: url(../img/icon.png) -150px -90px; width: 17px;height: 17px;}
+
+/* 게시판2 */
+.notice2 {position: relative;margin-top: 15px;}
+.notice2 h4 {font-size: 14px; color: #0093bd; padding-bottom: 3px;font-weight: bold;}
+.notice2 ul {}
+.notice2 li {overflow: hidden; background: url(../img/dot.gif) no-repeat 0 8px;padding-left: 8px;}
+.notice2 li a {float:left; width: 65%; overflow: hidden; text-overflow: ellipsis; white-space: nowrap;}
+.notice2 li span {float:right; width: 30%; text-align: right;}
+.notice2 a.more {position: absolute; right: 0; top: 0; display: block;
+background: url(../img/icon.png) -150px -90px; width: 17px;height: 17px;}
 
