--- a/STANDARD_WEB/web/css/style.css
+++ b/STANDARD_WEB/web/css/style.css
@@ -133,3 +133,60 @@ background: url(../img/icon.png) -150px -90px; width: 17px;height: 17px;}
 .notice2 a.more {position: absolute; right: 0; top: 0; display: block;
 background: url(../img/icon.png) -150px -90px; width: 17px;height: 17px;}
 
+/* 게시판3 */
+.notice3 {position: relative;}
+.notice3 h4 {font-size: 14px; color: #0093bd; padding-bottom: 3px;font-weight: bold;}
+.notice3 li {position: relative;padding: 8px 0 14px 60px;}
+.notice3 li a img {width: 50px; position: absolute; left: 0; top: 0; border: 1px solid #0093bd;}
+.notice3 li a strong {display:block;overflow: hidden; text-overflow: ellipsis; white-space: nowrap;}
+.notice3 li a span {display:block;overflow: hidden; text-overflow: ellipsis; white-space: nowrap; font-size: 12px;}
+.notice3 a.more {position: absolute; right: 0; top: 0; display: block;
+background: url(../img/icon.png) -150px -90px; width: 17px;height: 17px;}
+
+/* 마우스 오버효과1 */
+
+.notice_hover h4 {font-size: 14px; color: #0093bd; padding-bottom: 3px;font-weight: bold;}
+.notice_hover ul {overflow: hidden;}
+.notice_hover li {float: left; width: 93px; margin-right: 5px;text-align: center;}
+.notice_hover li:last-child {margin-right: 0;} /* ie9 부터 적용 */
+.notice_hover li a span {position: relative;display: block;width: 93px;height: 93px;line-height: 93px;}
+.notice_hover li a span img {width: 100%;}
+.notice_hover li a span em {visibility: hidden; position:absolute; left: 0;top: 0;background: rgba(0,0,0,0.7); color: #fff;width: 100%;height: 100%;}
+.notice_hover li a span:hover em{visibility: visible;}
+.notice_hover li a strong {padding-top: 3px;display: inline-block;font-size: 12px;}
+
+/* 마우스 오버효과2 */
+.notice_hover2 {}
+.notice_hover2 ul {overflow: hidden;}
+.notice_hover2 li {float: left;width: 93px; margin-right: 5px;text-align: center;}
+.notice_hover2 li:last-child {margin-right: 0;}
+.notice_hover2 li a span {position:relative; display:block; width: 93px;height: 93px;}
+.notice_hover2 li a span img {width: 100%;}
+.notice_hover2 li a span em {visibility: hidden; position: absolute; left: 0;bottom: 0;background: rgba(0,0,0,0.7); color:#fff; width: 100%;}
+.notice_hover2 li a span:hover em {visibility: visible;}
+.notice_hover2 li a strong {padding-top: 3px;display: inline-block;font-size: 12px;}
+
+/* 컨텐츠 요소를 보이지 않게 하는 방법
+1. display:none; -- display:block; (영역이 사라짐)
+2. visibility: hidden; -- visibility: visible; (영역유지)
+3. opacity: 0; -- opacity: 1; (영역유지)
+4. width: 0; height: 0; overflow: hidden;
+*/
+
+/* 탭 메뉴 */
+.tab_menu {position:relative; border: 1px solid #ccc; padding: 8px; height: 105px;}
+.tab_menu ul {overflow: hidden; border-bottom: 1px solid #ccc;}
+.tab_menu ul li {float: left; border: 1px solid #ccc; margin-right: -1px; margin-bottom: -1px;}
+.tab_menu ul li a {padding: 5px 10px; display:block;}
+.tab_menu ul li ul {position: absolute; left: 0; top: 48px; width: 270px; border: 0;}
+.tab_menu ul li ul li {float:none; border:0; background: url(../img/dot.gif) no-repeat 9px 8px; padding-left: 18px;}
+.tab_menu ul li ul li a {overflow: hidden; text-overflow: ellipsis; white-space: nowrap; width: 100%; padding: 0 0 3px 0;}
+.tab_menu ul li.active {background: #2c94c4;}
+.tab_menu ul li.active a {color: #fff;}
+.tab_menu ul li.active ul li a {color: #333;}
+
+
+
+
+
+
