popup & script modify

--- a/STANDARD_WEB/web/css/reset.css
+++ b/STANDARD_WEB/web/css/reset.css
@@ -39,7 +39,7 @@ body, input, textarea, select, button, table {
     color:#222;font-size:13px;line-height:1.5;}
 
 /* 폰트 스타일 초기화 */
-em {font-style: normal;}
+em, address {font-style: normal;}
 
 /* 블릿기호 초기화 */
 dl,ul,li,ol,menu{list-style: none;}
@@ -49,6 +49,9 @@ h1,h2,h3,h4,h5,h6 {font-size:13px; color:#222; font-weight:normal;}
 
 /* 테두리 초기화 */
 img, fieldset {border: 0 none;}
+
+/* 버튼 초기화 */
+button {border:0;}
 
 /* IR 기법 */
 /* 의미있는 이미지의 대체 텍스트를 제공하는 경우 */
